--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Bhanu Prakash Tankasala",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "validator": "^13.15.0"
   }
 }
